# aves-horizons

./: .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  README_TRANSFORMER.md  TRAINING.md  WARP.md  example_training_config.json  main.py  pyproject.toml  pytest.ini  req.md  test_config.json  test_team_rewards.py  train_ship_agent.py
core/: environent.py  physics.py  projectile.py  ship.py  ship_physics copy.py  ship_physics.py
docs/: COLLISION_DETECTION.md  model.md  usage.md
gym_env/: ship_env.py
models/: model_final.pt
rendering/: pygame_renderer.py
src/: agents.py  bc_training.py  bullets.py  callbacks.py  collect_data.py  constants.py  derive_ship_parameters.py  derived_ship_parameters.yaml  env.py  evaluation.py  game_runner.py  main.py  old_physics.py  play.py  playback_agent.py  renderer.py  rl_wrapper.py  scripted_agent.py  ship.py  snapshot.py  state.py  team_env_wrapper.py  team_transformer_model.py  test_continuous_collision.py  test_deathmatch_selfplay.py  test_ship_transformer.py  test_train.py  train.py  train_deathmatch_selfplay.py  train_ship_transformer.py  transformer_policy.py  unified_train.py  unified_training.yaml
src2/: bullets.py  env.py  globals.py  ship.py
tests/: conftest.py  test_agents_integration.py  test_bullets.py  test_constants.py  test_data_formats.py  test_derived_ship_parameters.py  test_environment_basics.py  test_environment_combat.py  test_environment_physics.py  test_fixtures.py  test_functional.py  test_game_runner.py  test_gameplay.py  test_gameplay_improved.py  test_gym_compliance.py  test_imports.py  (+11 more)
(+32 files in other folders)
